# ComfyUI-ControlnetAux

./: .gitignore  README.md  __init__.py  controlnetaux.py  custom-node-list.json  custom_node.json  funcs.py  pyproject.toml  requirements.txt  setup.py
nodes/: controlnetaux.py  funcs.py  nodes.py  options.py
notebooks/: ComfyUI-ControlnetAux.ipynb
workflows/: example.json
